# esp32-fever-dream

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md  partitions.csv  sdkconfig.defaults
documents/: 00_VISION.md  01_PLAN.md  02_ML_OCR.md  03_TINYML_TFLITE_PLAN.md  03_currentState.md  04_TFLITE_TRAIN_DEPLOY_PLAN.md  05_ARCHITECTURE.md  06_AQS_FIVE_VALUE_PLAN.md  07_TIMED_BATCH_LABELING_PLAN.md  08_MODEL_QUALITY_REMEDIATION_PLAN.md  08_OLLAMA_LABELING_SESSION_2026-06-28.md  09_DATASET_AND_CAMERA_REVIEW_2026-06-29.md  dataset_review_20260629.html  firmware_breakdown.md
firmware/: CMakeLists.txt
firmware/include/: api_router.h  api_serializer.h  app_config.h  camera_manager.h  diagnostics.h  flash_persistence.h  image_preprocessor.h  measurement_controller.h  measurement_scheduler.h  pipeline_stage.h  reading_record.h  recognition.h  record_codec.h  storage_ring_buffer.h  time_manager.h  tinyml_display_recognizer.h  version.h
firmware/src/: api_router.cpp  api_serializer.cpp  camera_manager.cpp  diagnostics.cpp  flash_persistence.cpp  image_preprocessor.cpp  measurement_controller.cpp  measurement_scheduler.cpp  reading_record.cpp  recognition.cpp  record_codec.cpp  storage_ring_buffer.cpp  time_manager.cpp  tinyml_display_recognizer.cpp  version.cpp
main/: CMakeLists.txt  app_main.cpp  config.example.h  debug_capture_server.cpp  debug_capture_server.h  idf_component.yml  serial_capture.cpp  serial_capture.h
reports/: model_deployment_gate.json  model_eval.md  model_training_audit.json  model_training_audit.md  ollama_labeler_smoke.md  review_log.md  static_analysis.md
scripts/: build_firmware.sh  check_all.sh  collect_dataset.sh  collect_serial_dataset.sh  collect_timed_aqs.sh  convert_model.sh  flash_device.sh  format_cpp.sh  generate_wifi_config.sh  idf_env.sh  monitor_serial.sh  package_web_assets.sh  run_model_on_images.sh  setup_ml_env.sh  static_analysis.sh  test_firmware.sh  train_model.sh  verify_model_deployment.sh
tests/: CMakeLists.txt  test_api_router.cpp  test_api_serializer.cpp  test_image_preprocessor.cpp  test_main.cpp  test_measurement_controller.cpp  test_measurement_scheduler.cpp  test_recognition.cpp  test_record_codec.cpp  test_storage_ring_buffer.cpp  test_support.h  test_time_manager.cpp
tools/: README.md
tools/dataset/: README.md  audit_capture_corpus.py  collect_timed_aqs.py  label_fixed_display_batch.py  merge_label_csv.py  ollama_label_batch.py  relabel_fixed_display_ranges.py  review_ollama_labels.py  serial_capture.py
tools/dataset/captures/approved_29c_43h_20260625T185939Z/: fixed_display_report.json  fixed_display_report.md  labels_environment.csv  manifest.csv
tools/dataset/captures/baseline_20260625T182247Z/: manifest.csv
tools/dataset/captures/baseline_20260625T182331Z/: fixed_display_report.json  fixed_display_report.md  labels_environment.csv  manifest.csv  recognition_eval.json  recognition_eval.md
tools/dataset/captures/daylight_changed_29c_43h_20260625T191248Z/: fixed_display_report.json  fixed_display_report.md  labels_environment.csv  labels_environment_corrected.csv  manifest.csv
tools/dataset/captures/http_300_aqs_20260626T2040Z/: labels_environment.csv  labels_ollama_proposals.csv  labels_ollama_review_queue.csv  manifest.csv
tools/dataset/captures/live_mounted_29c_41h_20260625T195058Z/: labels_environment.csv
tools/dataset/tests/: test_audit_capture_corpus.py  test_ollama_label_batch.py  test_review_ollama_labels.py  test_serial_capture.py
tools/model_training/: README.md  apply_split_policy.py  audit_dataset.py  build_digit_dataset.py  create_crop_review_sheets.py  frozen_split_policy.json  run_digit_model.py  run_training_sweep.py  train_digit_classifier.py  verify_deployment_gate.py
tools/model_training/tests/: test_apply_split_policy.py  test_audit_dataset.py  test_build_digit_dataset.py  test_create_crop_review_sheets.py  test_run_digit_model.py  test_run_training_sweep.py  test_train_digit_classifier.py  test_verify_deployment_gate.py
tools/recognition_eval/: __init__.py  evaluate_display_text.py
web/: app.js  index.html  styles.css
(+51 files in other folders)
